--- a/resources/others.properties
+++ b/resources/others.properties
@@ -1,16 +1,20 @@
 # domain working on 
  baseURL=https://mytestcluster.uk-south.containers.mybluemix.net/web/domestic-metering/login
 
-#baseURL = http://realestate.upskills.in/region/plots-in-bangalore/?realteo_order=&keyword_search=Electronic+City%2C+Bengaluru%2C+Karnataka%2C+India&_property_type=plots&tax-region=central-bangalore-commercial-properties
-
 # implicit wait will be in seconds here 
 implicitWait=30
 
-username = 
-password = 
+# credentials for login to HC
+username = hvbot@nationalgrid.co.uk
+password = HcBot@12345!@
 
-# excel file path 
-excelfile1= C:\\Users\\HarshalKulkarni\\Desktop\\Morgage_testdata.xlsx
-excelfile2= C:\\Users\\HarshalKulkarni\\Desktop\\Morgage_Incoorect_testdata.xlsx
+# MPRN number & Supplier code for SAP Rainbow
+supplier_code_rainbow = BGT
+mprn_rainbow = 2489767807
 
+# MPRN number & Supplier code for SAP Pheonix
+supplier_code_pheonix = BGB
+mprn_phoenix = 2550060404
+
+# Screenshot captured @ below path
 screenshot.folder= C:\\Users\\HarshalKulkarni\\Desktop\\screenshots
