--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.selenium.automation.elearning.framework.testng</groupId>
-	<artifactId>Selenium-Automation-Elearning-Framework-TestNG</artifactId>
+	<groupId>com.selenium.automation.NGmetering.framework.testng</groupId>
+	<artifactId>Selenium-Automation-NGmeteringapp-Framework-TestNG</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 
@@ -40,7 +40,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.11</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/jexcelapi/jxl -->
 		<dependency>
